<resources>
    <string name="app_name">Blitzortung Lightning Monitor</string>
    <string name="ok" translatable="false">@android:string/ok</string>
    <string name="cancel" translatable="false">@android:string/cancel</string>
    <string name="widget_no_strike_data">no strike data</string>
    <string name="widget_location_not_available">location not available</string>
    <string name="widget_tap_to_grant_location">Tap to grant location access</string>
    <plurals name="strike">
        <item quantity="zero">no strike</item>
        <item quantity="one">1 strike</item>
        <item quantity="other">%d strikes</item>
    </plurals>
    <string name="minute">minute</string>
    <string name="info">Information</string>
    <string name="info_text">Project home:\n\thttps://github.com/wuan/bo-android\n\nVisualized lightning data
is provided by the <b>Blitzortung.org</b> realtime lighning community project.\nPlease refer
to\n\thttp://blitzortung.org/\nfor further information or how to participate.\n\n
<u>Translations:</u>\n
Croatian by Igor Dobrača (idobraca@rovinj.net)\n
Czech by Jakub Mareček (jakubmarecek715@gmail.com)\n
Dutch by Jeroen Boersma (jeroenboersma@gmail.com)\n
French by Frédéric France (frederic.france@free.fr)\n
Polish by Jakub Świątkiewicz (kuba.dex@gmail.com), Agnieszka Cieślak (aga_04@o2.pl)\n
Italian by Michele Locati (michele@locati.it)\n
Russian by Ivan Karev (karev.ivan@gmail.com)\n
    </string>
    <string name="copyright" translatable="false">© 2011–2026, Andreas Würl</string>
    <string name="project_email" translatable="false">blitzortung@tryb.de</string>
    <string name="legend">Legend</string>
    <string name="legend_grid">Grid</string>
    <string name="unit_minute">min</string>
    <string name="unit_km">km</string>
    <string name="total_time">total time</string>
    <string name="activity">activity</string>
    <string name="during">during the past</string>
    <string name="alarms">Alarms</string>
    <string name="alarms_not_available">Alarms disabled\nor\nLocation information missing</string>
    <string name="layers">Layers</string>
    <string name="preferences">Preferences</string>
    <string name="user_settings">User settings</string>
    <string name="bo_username">Username Blitzortung.org</string>
    <string name="bo_password">Password Blitzortung.org</string>
    <string name="map_settings">Map settings</string>
    <string name="map_mode">Map mode</string>
    <string name="map_mode_summary" translatable="false">%s</string>
    <string name="map_fade">Fade out map</string>
    <string name="map_fade_summary">Fade map background to enhance visibility of data</string>
    <string-array name="color_schemes">
        <item>Blitzortung.org</item>
        <item>Rainbow</item>
        <item>Temperature</item>
    </string-array>
    <string-array name="color_scheme_values">
        <item>BLITZORTUNG</item>
        <item>RAINBOW</item>
        <item>TEMPERATURE</item>
    </string-array>
    <string name="color_scheme">Color scheme</string>
    <string name="color_scheme_summary" translatable="false">%s</string>
    <string-array name="map_modes">
        <item>Dark map</item>
        <item>Bright map</item>
    </string-array>
    <string-array name="map_mode_values">
        <item>SATELLITE</item>
        <item>STREETMAP</item>
    </string-array>
    <string name="show_location">Show own location</string>
    <string name="show_location_summary">include symbol for own location in map</string>
    <string name="data_source_settings">Data source</string>
    <string name="region">Region</string>
    <string-array name="regions">
        <item>Local</item>
        <item>Global</item>
        <item>Europe</item>
        <item>N. America</item>
        <item>C. America</item>
        <item>S. America</item>
        <item>Oceania</item>
        <item>Asia</item>
        <item>Africa</item>
    </string-array>
    <string-array name="regions_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>3</item>
        <item>7</item>
        <item>5</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
    </string-array>
    <string name="interval_duration">Time interval</string>
    <string-array name="interval_durations">
        <item>30 min</item>
        <item>60 min</item>
        <item>90 min</item>
        <item>120 min</item>
        <item>240 min</item>
    </string-array>
    <string-array name="interval_duration_values">
        <item>30</item>
        <item>60</item>
        <item>90</item>
        <item>120</item>
        <item>240</item>
    </string-array>
    <string name="historic_timestep_limit_reached">24 hours limit reached</string>
    <string name="historic_timestep">Historic timestep</string>
    <string-array name="historic_timesteps">
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
    </string-array>
    <string-array name="historic_timestep_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string name="query_period">Query period</string>
    <string-array name="query_periods">
        <item>20 s</item>
        <item>30 s</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>10 min</item>
    </string-array>
    <string-array name="query_period_values">
        <item>20</item>
        <item>30</item>
        <item>60</item>
        <item>120</item>
        <item>300</item>
        <item>600</item>
    </string-array>
    <string name="grid_size">Grid size</string>
    <string-array name="grid_sizes">
        <item>auto</item>
        <item>5 km</item>
        <item>10 km</item>
        <item>25 km</item>
        <item>50 km</item>
        <item>100 km</item>
    </string-array>
    <string-array name="grid_size_values">
        <item>auto</item>
        <item>5000</item>
        <item>10000</item>
        <item>25000</item>
        <item>50000</item>
        <item>100000</item>
    </string-array>
    <string name="count_threshold">Strike count threshold</string>
    <string-array name="count_thresholds">
        <item>disabled</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string-array name="count_threshold_values">
        <item>0</item>
        <item>1</item>
        <item>5</item>
        <item>10</item>
        <item>25</item>
        <item>50</item>
    </string-array>
    <string name="data_source">Data source</string>
    <string name="data_source_summary" translatable="false">%s</string>
    <string-array name="data_sources">
        <item>Default</item>
        <item>Blitzortung.org</item>
    </string-array>
    <string-array name="data_source_values">
        <item>RPC</item>
        <item>HTTP</item>
    </string-array>
    <string name="location_settings">Location settings</string>
    <string-array name="location_modes">
        <item>Passive</item>
        <item>Network based</item>
        <item>GPS based</item>
        <item>Manual entry</item>
    </string-array>
    <string-array name="location_mode_values">
        <item>passive</item>
        <item>network</item>
        <item>gps</item>
        <item>manual</item>
    </string-array>
    <string name="location_mode">Location mode</string>
    <string name="location_mode_summary" translatable="false">%s</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="alarm_settings">Alarm settings</string>
    <string name="alarm_enabled">Alarm enabled</string>
    <string name="alarm_enabled_summary">Check lightning activity around the current location</string>
    <string name="background_query_period">Background query period</string>
    <string name="background_query_period_summary" translatable="false">%s</string>
    <string name="background_query_toast">Please disable battery optimization for this app for fully functional background alarm.</string>
    <string name="open_battery_optimiziation">Please disable battery optimization for this app when background query is enabled. Press CANCEL to disable background query and OK to proceed to the battery optimization setting.</string>
    <string-array name="background_query_periods">
        <item>off</item>
        <item>1 min</item>
        <item>2 min</item>
        <item>5 min</item>
        <item>10 min</item>
        <item>15 min</item>
        <item>30 min</item>
        <item>60 min</item>
        <item>120 min</item>
    </string-array>
    <string name="notification_distance_limit">Notification distance limit</string>
    <string name="notification_distance_limit_summary" translatable="false">%s</string>
    <string name="signaling_distance_limit">Signaling distance limit</string>
    <string name="signaling_distance_limit_summary" translatable="false">%s</string>
    <string name="signaling_suppression_time">Signaling suppression time</string>
    <string name="signaling_suppression_time_summary" translatable="false">%s</string>
    <string name="generic_settings">Generic settings</string>
    <string name="measurement_unit">Systems of measurement</string>
    <string name="measurement_unit_summary" translatable="false">%s</string>
    <string name="do_not_sleep">Do not sleep</string>
    <string name="do_not_sleep_summary">do not go to sleep while application is open</string>
    <string name="alarm_signal_settings">Alarm signal settings</string>
    <string name="alarm_audio_signal">Alarm audio signal</string>
    <string name="alarm_vibration_signal">Alarm vibration duration</string>
    <string name="alarm_vibration_signal_summary">choose the duration of vibration signaling in alarm case (in milliseconds)</string>
    <string name="service_url">Custom Service URL</string>
    <string name="app_log">Application log</string>
    <string name="own_location_size">Own location symbol size</string>
    <string name="own_location_size_summary">Set the size of the own location symbol</string>
    <string name="keep_zoom_goto_own_location_summary">Setting to keep the current zoom when centering the own location</string>
    <string name="keep_zoom_goto_own_location_title">Keep zoom</string>
    <string name="map_scale">Map scale</string>
    <string name="map_scale_summary">Select scaling [%] of map tiles</string>
    <string name="changelog">Change log</string>
    <string name="animation_settings">Animation settings</string>
    <string name="animation_sleep_duration">Sleep between steps</string>
    <string name="animation_sleep_duration_summary">Sleep time between animation steps in milliseconds</string>
    <string name="animation_cycle_sleep_duration">Sleep after cycle</string>
    <string name="animation_cycle_sleep_duration_summary">Sleep time after animation cycle has finished (in milliseconds)</string>
    <string name="ms">ms</string>
    <string name="percent" translatable="false">%</string>
    <string name="diagnosis">Diagnosis features</string>
    <string name="diagnosis_summary">Enable features supporting diagnosis of app functionality.</string>
    <string name="doc_overlay_status">Status information is displayed here (e.g., connection, location).</string>
    <string name="doc_overlay_alert">Alerts for nearby lightning activity will appear here.</string>
    <string name="doc_overlay_buttons">Open settings and control the animation.</string>
    <string name="doc_overlay_histogram">The histogram shows lightning activity over time.</string>
    <string name="doc_overlay_legend">The map legend explains the colors and symbols used.</string>
    <string name="doc_overlay_time_slider">Use the time slider to view historical lightning data.</string>
    <string name="doc_overlay_got_it">Got it!</string>
</resources>