<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory android:title="@string/map_settings">
        <ListPreference
            android:defaultValue="SATELLITE"
            android:enabled="true"
            android:entries="@array/map_modes"
            android:entryValues="@array/map_mode_values"
            android:key="map_mode"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/map_mode_summary"
            android:title="@string/map_mode" />
        <SeekBarPreference
            android:defaultValue="75"
            android:key="map_scale"
            android:max="150"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/map_scale_summary"
            android:text="@string/percent"
            android:title="@string/map_scale"
            app:min="25"
            app:seekBarIncrement="25"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="55"
            android:key="map_fade"
            android:max="90"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/map_fade_summary"
            android:text="@string/percent"
            android:title="@string/map_fade"
            app:seekBarIncrement="5"
            app:showSeekBarValue="true" />
        <ListPreference
            android:defaultValue="BLITZORTUNG"
            android:enabled="true"
            android:entries="@array/color_schemes"
            android:entryValues="@array/color_scheme_values"
            android:key="color_scheme"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/color_scheme_summary"
            android:title="@string/color_scheme" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="location"
            android:selectable="true"
            android:summary="@string/show_location_summary"
            android:title="@string/show_location" />
        <SeekBarPreference
            min="50"
            android:defaultValue="100"
            android:key="own_location_size"
            android:max="400"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/own_location_size_summary"
            android:text="@string/percent"
            android:title="@string/own_location_size"
            app:showSeekBarValue="true" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="keep_zoom_goto_own_location"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/keep_zoom_goto_own_location_summary"
            android:title="@string/keep_zoom_goto_own_location_title" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="animation_settings"
        android:title="@string/animation_settings">
        <SeekBarPreference
            android:defaultValue="200"
            android:key="animation_sleep_duration"
            android:max="500"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/animation_sleep_duration_summary"
            android:text="@string/ms"
            android:title="@string/animation_sleep_duration"
            app:min="100"
            app:seekBarIncrement="50"
            app:showSeekBarValue="true" />
        <SeekBarPreference
            android:defaultValue="3000"
            android:key="animation_cycle_sleep_duration"
            android:max="5000"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/animation_cycle_sleep_duration_summary"
            android:text="@string/ms"
            android:title="@string/animation_cycle_sleep_duration"
            app:min="0"
            app:seekBarIncrement="500"
            app:showSeekBarValue="true" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="data_source_settings"
        android:title="@string/data_source_settings">
        <ListPreference
            android:defaultValue="RPC"
            android:enabled="true"
            android:entries="@array/data_sources"
            android:entryValues="@array/data_source_values"
            android:key="data_source"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/data_source_summary"
            android:title="@string/data_source" />
        <EditTextPreference
            android:defaultValue=""
            android:key="service_url"
            android:persistent="true"
            android:title="@string/service_url" />
        <EditTextPreference
            android:defaultValue=""
            android:key="username"
            android:persistent="true"
            android:title="@string/bo_username" />
        <EditTextPreference
            android:inputType="textPassword"
            android:key="password"
            android:persistent="true"
            android:title="@string/bo_password" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/location_settings">
        <ListPreference
            android:defaultValue="network"
            android:enabled="true"
            android:entries="@array/location_modes"
            android:entryValues="@array/location_mode_values"
            android:key="location_mode"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/location_mode_summary"
            android:title="@string/location_mode" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="numberDecimal|numberSigned"
            android:key="location_longitude"
            android:persistent="true"
            android:title="@string/longitude" />
        <EditTextPreference
            android:defaultValue=""
            android:inputType="numberDecimal|numberSigned"
            android:key="location_latitude"
            android:persistent="true"
            android:title="@string/latitude" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/alarm_settings">
        <CheckBoxPreference
            android:defaultValue="true"
            android:enabled="true"
            android:key="alarm_enabled"
            android:selectable="true"
            android:summary="@string/alarm_enabled_summary"
            android:title="@string/alarm_enabled" />
        <org.blitzortung.android.app.view.MessageListPreference
            android:defaultValue="0"
            android:enabled="true"
            android:entries="@array/background_query_periods"
            android:entryValues="@array/background_query_period_values"
            android:key="background_query_period"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/background_query_period_summary"
            android:title="@string/background_query_period" />
        <ListPreference
            android:defaultValue="50"
            android:enabled="true"
            android:entries="@array/distance_limits"
            android:entryValues="@array/distance_limit_values"
            android:key="notification_distance_limit"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/notification_distance_limit_summary"
            android:title="@string/notification_distance_limit" />

        <ListPreference
            android:defaultValue="25"
            android:enabled="true"
            android:entries="@array/distance_limits"
            android:entryValues="@array/distance_limit_values"
            android:key="signaling_distance_limit"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/signaling_distance_limit_summary"
            android:title="@string/signaling_distance_limit" />
        <PreferenceCategory android:title="@string/alarm_signal_settings">
            <Preference
                android:defaultValue=""
                android:enabled="true"
                android:key="alarm_sound_signal"
                android:persistent="true"
                android:ringtoneType="notification"
                android:selectable="true"
                android:showDefault="true"
                android:title="@string/alarm_audio_signal" />
            <SeekBarPreference
                android:defaultValue="3"
                android:enabled="true"
                android:key="alarm_vibration_signal"
                android:max="30"
                android:persistent="true"
                android:selectable="true"
                android:summary="@string/alarm_vibration_signal_summary"
                android:text="@string/ms"
                android:title="@string/alarm_vibration_signal"
                app:showSeekBarValue="true" />
        </PreferenceCategory>
        <ListPreference
            android:defaultValue="0"
            android:enabled="true"
            android:entries="@array/signaling_suppression_times"
            android:entryValues="@array/signaling_suppression_time_values"
            android:key="signaling_suppression_time"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/signaling_suppression_time_summary"
            android:title="@string/signaling_suppression_time" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/generic_settings">
        <ListPreference
            android:defaultValue="METRIC"
            android:enabled="true"
            android:entries="@array/measurement_units"
            android:entryValues="@array/measurement_unit_values"
            android:key="measurement_unit"
            android:persistent="true"
            android:selectable="true"
            android:summary="@string/measurement_unit_summary"
            android:title="@string/measurement_unit" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="do_not_sleep"
            android:selectable="true"
            android:summary="@string/do_not_sleep_summary"
            android:title="@string/do_not_sleep" />
        <CheckBoxPreference
            android:defaultValue="false"
            android:enabled="true"
            android:key="diagnosis_enabled"
            android:selectable="true"
            android:summary="@string/diagnosis_summary"
            android:title="@string/diagnosis" />
    </PreferenceCategory>

</PreferenceScreen>
