<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/preferences" />

    <item
        android:id="@+id/menu_alarms"
        android:icon="@android:drawable/ic_menu_view"
        android:title="@string/alarms" />

    <!--<item
            android:id="@+id/menu_layers"
            android:icon="@android:drawable/ic_menu_mapmode"
            android:title="@string/layers"/>-->

    <item
        android:id="@+id/menu_log"
        android:icon="@android:drawable/ic_dialog_alert"
        android:title="@string/app_log" />

    <item
        android:id="@+id/menu_changelog"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/changelog" />

    <item
        android:id="@+id/menu_info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info" />

</menu>
