<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/info_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/info_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/info_text"
        android:textColor="#FFF"
        android:autoLink="web" />

    <TextView
        android:id="@+id/copyright_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/copyright"
        android:textColor="#FFF" />

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/project_email"
        android:textColor="#FFF"
        android:autoLink="email" />

</LinearLayout>